builders for string generators